banner section done

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             </nav>
 
             <div class="banner">
-
+                <h1 class="banner-head">Cool Dark UI Template for Webflow Agencies!</h1>
+                <button class="btn">Stay Focused</button>
             </div>
         </div>
     </header>
