Action section done

--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@
     </header>
 
 
-    <main>
+    <main class="main-content">
+
+        <div class="action">
+            <div class="card">
+                <div class="left-side">
+                    <h2>See it in Action</h2>
+                    <p>Explore the live preview and imagine your brand in this bold new look.</p>
+                    <button class="btn">Launch Live Preview</button>
+                </div>
+
+                <div class="right-side">
+                    <img width="400" height="300" src="Assets/wc-mini.png" alt="">
+                </div>
+            </div>
+        </div>
 
     </main>
 
