productive users section done

--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
             </div>
         </div>
 
+        <div class="productive-users">
+            <div class="user">
+                <h2>Joined Thousands of Productive Users</h2>
+
+                <div class="user-info">
+                    <div class="info1">
+                        <h1>50k</h1>
+                        <p>Active Users</p>
+                    </div>
+                    <div class="info2">
+                        <h1>2M+</h1>
+                        <p>Focus Sessions</p>
+                    </div>
+                    <div class="info3">
+                        <h1>95%</h1>
+                        <p>Satisfaction Rate</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
