users comment section completed

--- a/index.html
+++ b/index.html
@@ -66,6 +66,72 @@
             </div>
         </div>
 
+        <!-- ---------users comments ---------- -->
+
+        <div class="users-comment">
+            <h1>What ours users say</h1>
+
+            <div class="comments">
+                <div class="comment">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h3>Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+
+                    <div class="user-details">
+                        <img src="Assets/avatar.png" alt="">
+                        <div>
+                            <h4>Jane Doe</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="comment">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h3>Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+
+                    <div class="user-details">
+                        <img src="Assets/avatar.png" alt="">
+                        <div>
+                            <h4>Jane Doe</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="comment">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <img src="Assets/icon-star.png" alt="">
+                    <h3>Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+
+                    <div class="user-details">
+                        <img src="Assets/avatar.png" alt="">
+                        <div>
+                            <h4>Jane Doe</h4>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
 
