contact us section done

--- a/index.html
+++ b/index.html
@@ -132,6 +132,27 @@
             </div>
         </div>
 
+
+        <!-- contact us section ----------- -->
+
+        <div class="contact-us">
+            <div class="getintouch">
+                <h1>Let's Get in Touch</h1>
+            </div>
+
+            <form action="">
+                <label for="email">Email</label>
+                <input type="email" name="" id="" placeholder="example@email.com">
+                <label for="name">Name</label>
+                <input type="text" name="" id="" placeholder="Enter your Name">
+                <label for="massage">Massage</label>
+
+                <textarea name="" id="" placeholder="Write your Message..."></textarea>
+
+                <input type="submit" value="Get in Touch" class="btn">
+            </form>
+        </div>
+
     </main>
 
 
