--- a/index.html
+++ b/index.html
@@ -157,7 +157,22 @@
 
 
     <footer>
+        <div>
+            <li class="footer-logo"><a href="index.html">LOGO</a></li>
+            <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can
+                bring your vision to life.</p>
+        </div>
 
+        <div class="footer-links-container">
+
+            <ul class="footer-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">How it Works</a></li>
+                <li><a href="#">Services</a></li>
+            </ul>
+
+        </div>
     </footer>
 </body>
 
