--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navbar">
             <nav>
                 <ul>
-                    <li><a href="index.html">LOGO</a></li>
+                    <li><a href="index.html">Landing Launchpad</a></li>
                     <li><button class="btn">Sign Up</button></li>
                 </ul>
             </nav>
@@ -86,7 +86,7 @@
                         <img src="Assets/avatar.png" alt="">
                         <div>
                             <h4>Jane Doe</h4>
-                            <p>Date</p>
+                            <p>09-07-2025</p>
                         </div>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                         <img src="Assets/avatar.png" alt="">
                         <div>
                             <h4>Jane Doe</h4>
-                            <p>Date</p>
+                            <p>10-07-2025</p>
                         </div>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                         <img src="Assets/avatar.png" alt="">
                         <div>
                             <h4>Jane Doe</h4>
-                            <p>Date</p>
+                            <p>11-07-2025</p>
                         </div>
                     </div>
                 </div>
@@ -158,7 +158,7 @@
 
     <footer>
         <div>
-            <li class="footer-logo"><a href="index.html">LOGO</a></li>
+            <li class="footer-logo"><a href="index.html">Landing Launchpad</a></li>
             <p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can
                 bring your vision to life.</p>
         </div>
